<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InscriptionActivity">

    <TextView
            android:text="@string/textSignin"
            android:layout_height="wrap_content"
            android:id="@+id/textSignin" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/textPsw"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:hint="@string/textPsw"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textPseudo"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/picSignin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textMail"/>
    <Button
            android:text="@string/signinSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signinSubmit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/picSignin" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textNom" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textSignin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:hint="@string/textNom"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textPrenom"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textNom"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:hint="@string/textPrenom"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textPseudo"
            app:layout_constraintTop_toBottomOf="@+id/textPrenom" android:hint="@string/textPseudo"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/textMail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textPsw"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:hint="@string/textMail"/>
</android.support.constraint.ConstraintLayout>